# Bridge_Slab_Design2

./: .gitignore  .replit  BUG_FIXES_AND_OPTIMIZATIONS.md  COMPREHENSIVE_TEST_PLAN.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  README_RAJKUMAR.md  STREAMLIT_DEPLOYMENT.md  TEST_EXECUTION_GUIDE.md  TEST_SCENARIOS.md  app.py  bug removal prompt GENERAL.md  create_sample_excel_files.py  create_test_files.py  generate_sample_outputs.py  generate_test_excel_files.py  pyproject.toml  requirements.txt  test_excel_processor.py  test_output_manager.py
modules/: abutment_designer.py  bridge_designer.py  claude_integration.py  cross_section_designer.py  excel_processor.py  hydraulic_analyzer.py  master_coordinator.py  pdf_generator.py  stability_analyzer.py
static/: styles.css
utils/: data_structures.py  formula_extractor.py  output_manager.py
